--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-facebook-login": "^3.7.2",
+    "react-google-login": "^3.0.4",
     "react-scripts": "1.0.17"
   },
   "scripts": {
